--- a/src/app.css
+++ b/src/app.css
@@ -76,3 +76,9 @@
 		@apply bg-background text-foreground;
 	}
 }
+
+@font-face {
+  font-family: "San Francisco";
+  font-weight: 400;
+  src: url("https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-regular-webfont.woff");
+}
